--- a/genindex.html
+++ b/genindex.html
@@ -131,8 +131,6 @@
       </ul></li>
       <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CommandInputs">CommandInputs (class in copyxnat.xnat.commands)</a>
 </li>
-      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.CommandReturn">CommandReturn (class in copyxnat.xnat.commands)</a>
-</li>
       <li><a href="copyxnat.commands.find_commands.html#copyxnat.commands.find_commands.commands">commands() (in module copyxnat.commands.find_commands)</a>
 </li>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter.complete_progress">complete_progress() (copyxnat.pyreporter.pyreporter.PyReporter method)</a>
@@ -847,6 +845,8 @@
         <li><a href="versioneer.html#versioneer.render_pep440">(in module versioneer)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.utils.versioneer_version.html#copyxnat.utils.versioneer_version.render_pep440_old">render_pep440_old() (in module copyxnat.utils.versioneer_version)</a>
 
       <ul>
@@ -859,8 +859,6 @@
         <li><a href="versioneer.html#versioneer.render_pep440_post">(in module versioneer)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.utils.versioneer_version.html#copyxnat.utils.versioneer_version.render_pep440_pre">render_pep440_pre() (in module copyxnat.utils.versioneer_version)</a>
 
       <ul>
@@ -881,6 +879,8 @@
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources.resources">resources() (copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources method)</a>
 </li>
+      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command.run">run() (copyxnat.xnat.commands.Command method)</a>
+</li>
       <li><a href="copyxnat.utils.versioneer_version.html#copyxnat.utils.versioneer_version.run_command">run_command() (in module copyxnat.utils.versioneer_version)</a>
 
       <ul>
@@ -890,30 +890,6 @@
 </li>
       </ul></li>
       <li><a href="copyxnat.xnat.run_command.html#copyxnat.xnat.run_command.run_command_on_servers">run_command_on_servers() (in module copyxnat.xnat.run_command)</a>
-</li>
-      <li><a href="copyxnat.commands.copy_command.html#copyxnat.commands.copy_command.CopyCommand.run_post">run_post() (copyxnat.commands.copy_command.CopyCommand method)</a>
-
-      <ul>
-        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command.run_post">(copyxnat.xnat.commands.Command method)</a>
-</li>
-      </ul></li>
-      <li><a href="copyxnat.commands.check_datatypes_command.html#copyxnat.commands.check_datatypes_command.CheckDatatypesCommand.run_pre">run_pre() (copyxnat.commands.check_datatypes_command.CheckDatatypesCommand method)</a>
-
-      <ul>
-        <li><a href="copyxnat.commands.copy_command.html#copyxnat.commands.copy_command.CopyCommand.run_pre">(copyxnat.commands.copy_command.CopyCommand method)</a>
-</li>
-        <li><a href="copyxnat.commands.export_command.html#copyxnat.commands.export_command.ExportCommand.run_pre">(copyxnat.commands.export_command.ExportCommand method)</a>
-</li>
-        <li><a href="copyxnat.commands.ohif_command.html#copyxnat.commands.ohif_command.OhifCommand.run_pre">(copyxnat.commands.ohif_command.OhifCommand method)</a>
-</li>
-        <li><a href="copyxnat.commands.rebuild_catalog_command.html#copyxnat.commands.rebuild_catalog_command.RebuildCatalogCommand.run_pre">(copyxnat.commands.rebuild_catalog_command.RebuildCatalogCommand method)</a>
-</li>
-        <li><a href="copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand.run_pre">(copyxnat.commands.show_command.ShowCommand method)</a>
-</li>
-        <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command.run_pre">(copyxnat.xnat.commands.Command method)</a>
-</li>
-      </ul></li>
-      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.run_recursive">run_recursive() (copyxnat.xnat.xnat_interface.XnatItem method)</a>
 </li>
   </ul></td>
 </tr></table>
