--- a/_modules/copyxnat/commands/show_command.html
+++ b/_modules/copyxnat/commands/show_command.html
@@ -43,7 +43,7 @@
 <span class="sd">&quot;&quot;&quot;Command which displays contents of XNAT projects&quot;&quot;&quot;</span>
 <span class="kn">import</span> <span class="nn">os</span>
 
-<span class="kn">from</span> <span class="nn">copyxnat.xnat.commands</span> <span class="kn">import</span> <span class="n">Command</span><span class="p">,</span> <span class="n">CommandReturn</span>
+<span class="kn">from</span> <span class="nn">copyxnat.xnat.commands</span> <span class="kn">import</span> <span class="n">Command</span>
 
 
 <div class="viewcode-block" id="ShowCommand"><a class="viewcode-back" href="../../../copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand">[docs]</a><span class="k">class</span> <span class="nc">ShowCommand</span><span class="p">(</span><span class="n">Command</span><span class="p">):</span>
@@ -60,10 +60,10 @@
         <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="n">inputs</span><span class="p">,</span> <span class="n">scope</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">outputs</span> <span class="o">=</span> <span class="s1">&#39;&#39;</span>
 
-<div class="viewcode-block" id="ShowCommand.run_pre"><a class="viewcode-back" href="../../../copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand.run_pre">[docs]</a>    <span class="k">def</span> <span class="nf">run_pre</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">xnat_item</span><span class="p">,</span> <span class="n">from_parent</span><span class="p">):</span>  <span class="c1"># pylint: disable=unused-argument</span>
+    <span class="k">def</span> <span class="nf">_run</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">xnat_item</span><span class="p">,</span> <span class="n">from_parent</span><span class="p">):</span>  <span class="c1"># pylint: disable=unused-argument</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">outputs</span> <span class="o">+=</span> <span class="n">xnat_item</span><span class="o">.</span><span class="n">user_visible_info</span><span class="p">()</span> <span class="o">+</span> <span class="n">os</span><span class="o">.</span><span class="n">linesep</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">inputs</span><span class="o">.</span><span class="n">reporter</span><span class="o">.</span><span class="n">output</span><span class="p">(</span><span class="n">xnat_item</span><span class="o">.</span><span class="n">user_visible_info</span><span class="p">())</span>
-        <span class="k">return</span> <span class="n">CommandReturn</span><span class="p">()</span></div>
+        <span class="bp">self</span><span class="o">.</span><span class="n">_recurse</span><span class="p">(</span><span class="n">xnat_item</span><span class="o">=</span><span class="n">xnat_item</span><span class="p">)</span>
 
 <div class="viewcode-block" id="ShowCommand.print_results"><a class="viewcode-back" href="../../../copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand.print_results">[docs]</a>    <span class="k">def</span> <span class="nf">print_results</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Output results to user&quot;&quot;&quot;</span>
