--- a/genindex.html
+++ b/genindex.html
@@ -113,6 +113,8 @@
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatProject.clean">(copyxnat.xnat.xnat_interface.XnatProject method)</a>
 </li>
       </ul></li>
+      <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporterCodes.CLEAR">CLEAR (copyxnat.pyreporter.pyreporter.PyReporterCodes attribute)</a>
+</li>
       <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command">Command (class in copyxnat.xnat.commands)</a>
 </li>
       <li><a href="copyxnat.commands.check_datatypes_command.html#copyxnat.commands.check_datatypes_command.CheckDatatypesCommand.COMMAND_LINE">COMMAND_LINE (copyxnat.commands.check_datatypes_command.CheckDatatypesCommand attribute)</a>
@@ -390,12 +392,16 @@
 <h2 id="E">E</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporterCodes.END">END (copyxnat.pyreporter.pyreporter.PyReporterCodes attribute)</a>
+</li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItem.exists">exists() (copyxnat.xnat_backend.pyxnat_server.PyXnatItem method)</a>
 </li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.experiment">experiment (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatSubject.experiments">experiments() (copyxnat.xnat_backend.pyxnat_server.PyXnatSubject method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFile.export">export() (copyxnat.xnat.xnat_interface.XnatFile method)</a>
 
       <ul>
@@ -406,8 +412,6 @@
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatParentItem.export">(copyxnat.xnat.xnat_interface.XnatParentItem method)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.commands.export_command.html#copyxnat.commands.export_command.ExportCommand">ExportCommand (class in copyxnat.commands.export_command)</a>
 </li>
   </ul></td>
@@ -590,6 +594,20 @@
 </li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.MODALITY_TO_SCAN">MODALITY_TO_SCAN (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
 </li>
+      <li><a href="copyxnat.commands.check_datatypes_command.html#copyxnat.commands.check_datatypes_command.CheckDatatypesCommand.MODIFY_DST_SERVER">MODIFY_DST_SERVER (copyxnat.commands.check_datatypes_command.CheckDatatypesCommand attribute)</a>
+
+      <ul>
+        <li><a href="copyxnat.commands.copy_command.html#copyxnat.commands.copy_command.CopyCommand.MODIFY_DST_SERVER">(copyxnat.commands.copy_command.CopyCommand attribute)</a>
+</li>
+        <li><a href="copyxnat.commands.export_command.html#copyxnat.commands.export_command.ExportCommand.MODIFY_DST_SERVER">(copyxnat.commands.export_command.ExportCommand attribute)</a>
+</li>
+        <li><a href="copyxnat.commands.ohif_command.html#copyxnat.commands.ohif_command.OhifCommand.MODIFY_DST_SERVER">(copyxnat.commands.ohif_command.OhifCommand attribute)</a>
+</li>
+        <li><a href="copyxnat.commands.rebuild_catalog_command.html#copyxnat.commands.rebuild_catalog_command.RebuildCatalogCommand.MODIFY_DST_SERVER">(copyxnat.commands.rebuild_catalog_command.RebuildCatalogCommand attribute)</a>
+</li>
+        <li><a href="copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand.MODIFY_DST_SERVER">(copyxnat.commands.show_command.ShowCommand attribute)</a>
+</li>
+      </ul></li>
       <li>
     module
 
@@ -759,11 +777,13 @@
         <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.project_list">(copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.projects">projects() (copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter">PyReporter (class in copyxnat.pyreporter.pyreporter)</a>
+</li>
+      <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporterCodes">PyReporterCodes (class in copyxnat.pyreporter.pyreporter)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatAssessor">PyXnatAssessor (class in copyxnat.xnat_backend.pyxnat_server)</a>
 </li>
@@ -1020,6 +1040,8 @@
 <h2 id="W">W</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporterCodes.WARNING">WARNING (copyxnat.pyreporter.pyreporter.PyReporterCodes attribute)</a>
+</li>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter.warning">warning() (copyxnat.pyreporter.pyreporter.PyReporter method)</a>
 </li>
   </ul></td>
