deploy: 56263bb5f6128ea1af404f5312371d6186ef12e5

--- a/genindex.html
+++ b/genindex.html
@@ -982,7 +982,11 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase.user_visible_info">user_visible_info() (copyxnat.xnat.xnat_interface.XnatBase method)</a>
+
+      <ul>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFile.user_visible_info">(copyxnat.xnat.xnat_interface.XnatFile method)</a>
 </li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
