--- a/_modules/copyxnat/xnat/xnat_interface.html
+++ b/_modules/copyxnat/xnat/xnat_interface.html
@@ -46,7 +46,6 @@
 <span class="kn">import</span> <span class="nn">abc</span>
 <span class="kn">import</span> <span class="nn">os</span>
 
-<span class="kn">import</span> <span class="nn">pydicom</span>
 <span class="kn">import</span> <span class="nn">urllib3</span>
 
 <span class="kn">from</span> <span class="nn">copyxnat.xnat.xml_cleaner</span> <span class="kn">import</span> <span class="n">XmlCleaner</span><span class="p">,</span> <span class="n">XnatType</span>
@@ -339,12 +338,6 @@
                 <span class="s1">&#39;Skipping </span><span class="si">{}</span><span class="s1">: item already exists on server&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">label</span><span class="p">))</span>
         <span class="k">else</span><span class="p">:</span>
             <span class="n">local_file</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">interface</span><span class="o">.</span><span class="n">download_file</span><span class="p">(</span><span class="n">folder_path</span><span class="p">)</span>
-            <span class="n">file_format</span> <span class="o">=</span> <span class="n">attributes</span><span class="p">[</span><span class="s1">&#39;file_format&#39;</span><span class="p">]</span>
-            <span class="k">if</span> <span class="p">(</span><span class="ow">not</span> <span class="n">file_format</span><span class="p">)</span> <span class="ow">or</span> <span class="p">(</span><span class="n">file_format</span><span class="o">.</span><span class="n">upper</span><span class="p">()</span> <span class="o">==</span> <span class="s1">&#39;U&#39;</span><span class="p">):</span>
-                <span class="k">if</span> <span class="n">pydicom</span><span class="o">.</span><span class="n">misc</span><span class="o">.</span><span class="n">is_dicom</span><span class="p">(</span><span class="n">local_file</span><span class="p">):</span>
-                    <span class="bp">self</span><span class="o">.</span><span class="n">reporter</span><span class="o">.</span><span class="n">message</span><span class="p">(</span><span class="s1">&#39;Changing file type to DICOM&#39;</span><span class="p">)</span>
-                    <span class="n">attributes</span><span class="p">[</span><span class="s1">&#39;file_format&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="s1">&#39;DICOM&#39;</span>
-
             <span class="n">copied_item</span><span class="o">.</span><span class="n">create_on_server</span><span class="p">(</span><span class="n">create_params</span><span class="o">=</span><span class="n">attributes</span><span class="p">,</span>
                                          <span class="n">local_file</span><span class="o">=</span><span class="n">local_file</span><span class="p">,</span>
                                          <span class="n">dry_run</span><span class="o">=</span><span class="n">dry_run</span><span class="p">)</span>
@@ -358,7 +351,15 @@
             <span class="k">return</span> <span class="kc">None</span>
 
         <span class="n">folder_path</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">cache</span><span class="o">.</span><span class="n">make_output_path</span><span class="p">()</span>
-        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">interface</span><span class="o">.</span><span class="n">download_file</span><span class="p">(</span><span class="n">folder_path</span><span class="p">)</span></div></div>
+        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">interface</span><span class="o">.</span><span class="n">download_file</span><span class="p">(</span><span class="n">folder_path</span><span class="p">)</span></div>
+
+<div class="viewcode-block" id="XnatFile.user_visible_info"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFile.user_visible_info">[docs]</a>    <span class="k">def</span> <span class="nf">user_visible_info</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+        <span class="n">base_string</span> <span class="o">=</span> <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="n">user_visible_info</span><span class="p">()</span>
+        <span class="n">attrs</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">interface</span><span class="o">.</span><span class="n">file_attributes</span><span class="p">()</span>
+        <span class="n">attr_string</span> <span class="o">=</span> <span class="s1">&#39; (content:</span><span class="si">{}</span><span class="s1">, format:</span><span class="si">{}</span><span class="s1">, tags:</span><span class="si">{}</span><span class="s1">)&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">attrs</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s1">&#39;file_content&#39;</span><span class="p">),</span> <span class="n">attrs</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s1">&#39;file_format&#39;</span><span class="p">),</span>
+                                                                <span class="n">attrs</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s1">&#39;file_tags&#39;</span><span class="p">))</span>
+
+        <span class="k">return</span> <span class="n">base_string</span> <span class="o">+</span> <span class="n">attr_string</span></div></div>
 
 
 <div class="viewcode-block" id="XnatResource"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatResource">[docs]</a><span class="k">class</span> <span class="nc">XnatResource</span><span class="p">(</span><span class="n">XnatFileContainerItem</span><span class="p">):</span>
